--- a/src/app/brochure/brochure.component.html
+++ b/src/app/brochure/brochure.component.html
@@ -1,20 +1,51 @@
-<br><h3><a routerLink="/" class="routing">Rutgers Health Hack</a>  <span class="redtext"> > Brochure & Details </span></h3>
-<br>
-<div class="container">
-    <img src="https://i.imgur.com/EMC1hmI.jpg" class="brochure"><br>    <!--Title-->
-    <img src="https://i.imgur.com/gXKA43b.jpg" class="brochure"><br>    <!--Schedule-->
-    <img src="https://i.imgur.com/vKnuE0w.jpg" class="brochure"><br>    <!--Keynote-->
-    <img src="https://i.imgur.com/hzIM5IS.jpg" class="brochure"><br>    <!--Sponsors 1-->
-    <img src="https://i.imgur.com/x4fAjHS.jpg" class="brochure"><br>    <!--Sponsors 2-->
-    <img src="https://i.imgur.com/cUq35Mg.jpg" class="brochure"><br>    <!--Themes-->
-    <img src="https://i.imgur.com/Vt6YvMs.jpg" class="brochure"><br>    <!--Prizes-->
-    <img src="https://i.imgur.com/WDsNoVz.jpg" class="brochure"><br>    <!--Judges-->
-    <img src="https://i.imgur.com/Wqza0Jz.jpg" class="brochure"><br>    <!--Mentors1-->
-    <img src="https://i.imgur.com/eHWcIDq.jpg" class="brochure"><br>    <!--Mentors2-->
-    <img src="https://i.imgur.com/SdvDWb5.jpg" class="brochure"><br>    <!--Mentors3-->
-    <img src="https://i.imgur.com/ISZAfbc.jpg" class="brochure"><br>    <!--Mentors4-->
-    <img src="https://i.imgur.com/PpL6HfU.jpg" class="brochure"><br>    <!--Mentors5-->
-    <img src="https://i.imgur.com/KnJGIYq.jpg" class="brochure"><br>    <!--Mentors6-->
-    <img src="https://i.imgur.com/FreHNSK.jpg" class="brochure"><br>    <!--Mentors7-->
-    <img src="https://i.imgur.com/WgcstTk.jpg" class="brochure"><br>    <!--Mentors8-->   
-</div>
+<div class="brochure-content">
+    <h3><a routerLink="/" class="routing">Rutgers Health Hack</a> <span class="redtext"> > Event Details </span></h3>
+    <br>
+  
+    <div class="details-page">
+      <div class="countdown-section">
+        <div class="timer-wrapper">
+          <div class="timer-container">
+            <h4>Countdown to RU Health Hack</h4>
+            <app-countdown-timer></app-countdown-timer>
+          </div>
+          <button class="register-button">Register Now (Application Due Sep 30<sup>th</sup>)</button>
+        </div>
+      </div>
+  
+      <div class="event-info">
+        <h2>UNTIL RUTGERS HEALTH HACKATHON 2024!</h2>
+  
+        <section class="speakers">
+          <h3>SPEAKERS</h3>
+          <p>Coming Soon...</p>
+        </section>
+  
+        <section class="mentors">
+          <h3>MENTORS (Idea: A photo collage with Mentors Expertise as Cloud)</h3>
+          <p>Coming Soon...</p>
+        </section>
+  
+        <section class="expectations">
+          <h3>What to Expect?</h3>
+          <p>At the 48-hour Healthcare Hackathon, participants will dive into an immersive...</p>
+          <ul>
+            <li>Innovative Challenges: Tackle pressing healthcare issues...</li>
+            <li>Team Collaboration: Work in teams to brainstorm...</li>
+          </ul>
+        </section>
+  
+        <section class="workflow">
+          <h3>Prepare for a weekend filled with creativity, problem-solving, and impactful innovation!</h3>
+          <img src="/assets/images/1A.jpg" alt="Workflow 1" class="workflow-image">
+          <img src="/assets/images/1B.jpg" alt="Workflow 2" class="workflow-image">
+        </section>
+  
+        <section class="logistics">
+          <h3>Hotels, Logistics & Other Event Details</h3>
+          <p>Coming soon ...</p>
+        </section>
+      </div>
+    </div>
+  </div>
+  
