--- a/src/app/leader/leader.component.html
+++ b/src/app/leader/leader.component.html
@@ -1,148 +1,84 @@
-<br><h3><a routerLink="/" class="routing">Rutgers Health Hack</a>  <span class="destination"> > Leadership</span></h3>
-
-<mat-card class="bigcard">
-    <h1>Program Leadership</h1>
-    <mat-divider></mat-divider>
-    <h2>Organizers</h2>
-    <div class="container">
-    <mat-card class="biopic">
-        <mat-card-header>
-            <mat-card-title>
-               <h3>Jay Naik, MD</h3>
-               <h4>Co-Director and Clinical Lead</h4>
-            </mat-card-title>
-        </mat-card-header>
-        <div class="container">
-            <img class="matimg" src="/assets/images/Naik.jpg">
+<div class="leadership-container">
+    <h3><a routerLink="/" class="routing">Rutgers Health Hack</a>  <span class="destination"> > Leadership</span></h3>
+  
+    <div class="bigcard">
+      <h1>Program Leadership</h1>
+      <hr />
+      <h2>Organizers</h2>
+  
+      <div class="profiles">
+        <div class="profile">
+          <img src="/assets/images/Naik.jpg" alt="Jay Naik" class="profile-image">
+          <div class="profile-details">
+            <h3 class="profile-name">Jay Naik, MD</h3>
+            <h4 class="profile-title">Co-Director and Clinical Lead</h4>
+            <p class="profile-description">
+              Assistant Professor, Rutgers Robert Wood Johnson Medical School<br />
+              Vice Chair for Clinical Innovation, Department of Medicine<br />
+              Hospitalist, Division of General Internal Medicine<br />
+              Director, Healthcare Leadership and Management Firm
+            </p>
+          </div>
         </div>
-        <mat-card-content>           
-            <p>Assistant Professor, Rutgers Robert Wood Johnson Medical School <br> <br>
-                Vice Chair for Clinical Innovation, Department of Medicine <br> <br>
-                Hospitalist, Division of General Internal Medicine <br> <br>
-                Director, Healthcare Leadership and Management Firm
-            </p>     
-        </mat-card-content>
-    </mat-card>
-    <mat-card class="biopic">
-        <mat-card-header>
-            <mat-card-title>
-               <h3>Naveena Yanamala, PhD</h3>
-               <h4>Co-Director and AI Lead</h4>
-            </mat-card-title>
-        </mat-card-header>
-        <div class="container">
-            <img class="matimg" src="/assets/images/Yanamala.jpg">
+  
+        <div class="profile">
+          <img src="/assets/images/Yanamala.jpg" alt="Naveena Yanamala" class="profile-image">
+          <div class="profile-details">
+            <h3 class="profile-name">Naveena Yanamala, PhD</h3>
+            <h4 class="profile-title">Co-Director and AI Lead</h4>
+            <p class="profile-description">
+              Associate Professor, Rutgers Robert Wood Johnson Medical School<br />
+              Director of Artificial Intelligence and Data Science in the Division of Cardiovascular Disease and Hypertension<br />
+              Director, RWJUH Innovation Center
+            </p>
+          </div>
         </div>
-        <mat-card-content>           
-            <p>Associate Professor, Rutgers Robert Wood Johnson Medical School <br> <br>
-                Director of Artificial Intelligence and Data Science in the Division of Cardiovascular Disease and Hypertension <br> <br>
-                Director, RWJUH Innovation Center
-            </p>     
-        </mat-card-content>
-    </mat-card>
-    <mat-card class="biopic">
-        <mat-card-header>
-            <mat-card-title>
-               <h3>Daniel A Schaer, MD MPH</h3>
-               <h4>Advisor, Web & Communications</h4>
-            </mat-card-title>
-        </mat-card-header>
-        <div class="container">
-            <img class="matimg" src="/assets/images/Schaer.jpg">
+  
+        <div class="profile">
+          <img src="/assets/images/Schaer.jpg" alt="Daniel A Schaer" class="profile-image">
+          <div class="profile-details">
+            <h3 class="profile-name">Daniel A Schaer, MD MPH</h3>
+            <h4 class="profile-title">Advisor, Web & Communications</h4>
+            <p class="profile-description">
+              Assistant Professor, Rutgers Robert Wood Johnson Medical School<br />
+              Hospitalist, Division of General Internal Medicine
+            </p>
+          </div>
         </div>
-        <mat-card-content>           
-            <p>Assistant Professor, Rutgers Robert Wood Johnson Medical School <br> <br>
-                Hospitalist, Division of General Internal Medicine <br> <br>
-            </p>     
-        </mat-card-content>
-    </mat-card>
-    <mat-card class="biopic">
-        <mat-card-header>
-            <mat-card-title>
-               <h3>Ethan Halm, MD, MPH, MBA</h3>
-               <h4>Advisor, Logistics & Outreach</h4>
-            </mat-card-title>
-        </mat-card-header>
-        <div class="container">
-            <img class="matimg" src="https://ifh.rutgers.edu/wp-content/uploads/2022/02/Ethan-Halm-RBHS-1.jpg">
+  
+        <div class="profile">
+          <img src="https://ifh.rutgers.edu/wp-content/uploads/2022/02/Ethan-Halm-RBHS-1.jpg" alt="Ethan Halm" class="profile-image">
+          <div class="profile-details">
+            <h3 class="profile-name">Ethan Halm, MD, MPH, MBA</h3>
+            <h4 class="profile-title">Advisor, Logistics & Outreach</h4>
+            <p class="profile-description">
+              Professor, Rutgers Biomedical and Health Sciences<br />
+              Vice Chancellor for Population Health
+            </p>
+          </div>
         </div>
-        <mat-card-content>           
-            <p>Professor, Rutgers Biomedical and Health Sciences <br> <br>
-                Vice Chancellor for Population Health <br> <br>
-            </p>     
-        </mat-card-content>
-    </mat-card>
-    <mat-card class="biopic">
-        <mat-card-header>
-            <mat-card-title>
-               <h3>Allison Marcucci</h3>
-               <h4>Logistics, Advertising, and Outreach</h4>
-            </mat-card-title>
-        </mat-card-header>
-        <div class="container">
-            <img class="matimg" src="https://rutgershealth.org/sites/default/files/styles/3x4_small_1024_1_5x/public/2022-11/allisonmpic.jpg?h=da874183&itok=BqNS4gKh">
+  
+        <div class="profile">
+          <img src="https://rutgershealth.org/sites/default/files/styles/3x4_small_1024_1_5x/public/2022-11/allisonmpic.jpg?h=da874183&itok=BqNS4gKh" alt="Allison Marcucci" class="profile-image">
+          <div class="profile-details">
+            <h3 class="profile-name">Allison Marcucci</h3>
+            <h4 class="profile-title">Logistics, Advertising, and Outreach</h4>
+            <p class="profile-description">
+              Assistant to the Vice Chancellor for Population Health
+            </p>
+          </div>
         </div>
-        <mat-card-content>           
-            <p>Assistant to the Vice Chancellor for Population Health <br> <br>
-            </p>     
-        </mat-card-content>
-    </mat-card>
-    <mat-card class="biopic">
-        <mat-card-header>
-            <mat-card-title>
-               <h3>Jack Hemphill</h3>
-               <h4>Logistics, Advertising, and Outreach</h4>
-            </mat-card-title>
-        </mat-card-header>
-        <div class="container">
-            <img class="matimg" src="https://rutgershealth.org/sites/default/files/styles/3x4_small_1024_1_5x/public/2022-07/rcomm_2122_headshot_gme-johnhemphill1_0.jpg?h=18e44ed0&itok=b1-jorSQ">
+  
+        <div class="profile">
+          <img src="https://rutgershealth.org/sites/default/files/styles/3x4_small_1024_1_5x/public/2022-07/rcomm_2122_headshot_gme-johnhemphill1_0.jpg?h=18e44ed0&itok=b1-jorSQ" alt="Jack Hemphill" class="profile-image">
+          <div class="profile-details">
+            <h3 class="profile-name">Jack Hemphill</h3>
+            <h4 class="profile-title">Logistics, Advertising, and Outreach</h4>
+            <p class="profile-description">
+              Associate Program Manager, RBHS Clinical & Health Affairs
+            </p>
+          </div>
         </div>
-        <mat-card-content>           
-            <p>Associate Program Manager, RBHS Clinical & Health Affairs <br> <br>
-            </p>     
-        </mat-card-content>
-    </mat-card>
+      </div>
     </div>
-    <br>
-    <mat-divider></mat-divider>
-    <br> <br>
-    
-
-    <!--
-    <div class="container">
-    <mat-card class="biopic">
-        <mat-card-header>
-            <mat-card-title>
-               <h2>TBA</h2>
-            </mat-card-title>
-        </mat-card-header>
-        <div class="container">
-            <img class="matimg" src="">
-        </div>
-        <mat-card-content>           
-            <p>TBA<br> <br>
-                TBA <br> <br>
-            </p>     
-        </mat-card-content>
-    </mat-card>   
-    </div>
-    <mat-divider></mat-divider>
-    <h2>Institutional Sustainers</h2>
-    <div class="container">
-    <mat-card class="biopic">
-        <mat-card-header>
-            <mat-card-title>
-               <h2>TBA</h2>
-            </mat-card-title>
-        </mat-card-header>
-        <div class="container">
-            <img class="matimg" src="">
-        </div>
-        <mat-card-content>           
-            <p>TBA<br> <br>
-                TBA <br> <br>
-            </p>     
-        </mat-card-content>
-    </mat-card>   
-    </div>-->
-</mat-card>
+</div>
