--- a/src/app/brochure/brochure.component.html
+++ b/src/app/brochure/brochure.component.html
@@ -37,8 +37,8 @@
   
         <section class="workflow">
           <h3>Prepare for a weekend filled with creativity, problem-solving, and impactful innovation!</h3>
-          <img src="/assets/images/1A.jpg" alt="Workflow 1" class="workflow-image">
-          <img src="/assets/images/1B.jpg" alt="Workflow 2" class="workflow-image">
+          <img src="assets/images/1A.jpg" alt="Workflow 1" class="workflow-image">
+          <img src="assets/images/1B.jpg" alt="Workflow 2" class="workflow-image">
         </section>
   
         <section class="logistics">
