--- a/src/app/leader/leader.component.html
+++ b/src/app/leader/leader.component.html
@@ -8,7 +8,7 @@
   
       <div class="profiles">
         <div class="profile">
-          <img src="/assets/images/Naik.jpg" alt="Jay Naik" class="profile-image">
+          <img src="assets/images/Naik.jpg" alt="Jay Naik" class="profile-image">
           <div class="profile-details">
             <h3 class="profile-name">Jay Naik, MD</h3>
             <h4 class="profile-title">Co-Director and Clinical Lead</h4>
@@ -22,7 +22,7 @@
         </div>
   
         <div class="profile">
-          <img src="/assets/images/Yanamala.jpg" alt="Naveena Yanamala" class="profile-image">
+          <img src="assets/images/Yanamala.jpg" alt="Naveena Yanamala" class="profile-image">
           <div class="profile-details">
             <h3 class="profile-name">Naveena Yanamala, PhD</h3>
             <h4 class="profile-title">Co-Director and AI Lead</h4>
@@ -35,7 +35,7 @@
         </div>
   
         <div class="profile">
-          <img src="/assets/images/Schaer.jpg" alt="Daniel A Schaer" class="profile-image">
+          <img src="assets/images/Schaer.jpg" alt="Daniel A Schaer" class="profile-image">
           <div class="profile-details">
             <h3 class="profile-name">Daniel A Schaer, MD MPH</h3>
             <h4 class="profile-title">Advisor, Web & Communications</h4>
