--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="video-background-container">
-    <video autoplay muted loop id="background-video" preload="auto">
+    <video autoplay muted loop id="background-video" preload="auto" oncanplay="this.play()" onloadedmetadata="this.muted = true">
       <source src="assets/videos/RHH 2024 Final2.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
