--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -292,6 +292,6 @@
     
     
 <div class="producer-tag">
-    <img src="../../../assets/images/RBHS_REVWHITE.png" alt="Production Logo" class="producer-logo">
+    <img src="assets/images/RBHS_REVWHITE.png" alt="Production Logo" class="producer-logo">
     <span class="producer-text">@Rutgers 2024, @RWJMS 2024</span>
   </div>
